--- a/kontakt.html
+++ b/kontakt.html
@@ -32,7 +32,7 @@
             class="col-12 col-md-4 d-flex align-items-center justify-content-m-start mb-3 mb-md-0"
           >
             <img
-              src="../bilder/Logo.png"
+              src="bilder/Logo.png"
               alt="Logo"
               class="img-fluid"
               style="max-height: 100px"
@@ -47,7 +47,7 @@
               <!-- Container 1: Telefonnummer -->
               <div class="d-flex align-items-center m-2">
                 <img
-                  src="../bilder/tel-Icon.png"
+                  src="bilder/tel-Icon.png"
                   alt="tel-Icon"
                   class="img-fluid"
                   style="max-height: 22px"
@@ -62,7 +62,7 @@
               <!--Container 2: Email -->
               <div class="d-flex align-items-center m-2">
                 <img
-                  src="../bilder/Email-Icon.png"
+                  src="bilder/Email-Icon.png"
                   alt="Email-Icon"
                   class="img-fluid"
                   style="max-height: 22px"
@@ -77,7 +77,7 @@
               <!-- Container 2: Arbeitzeit -->
               <div class="d-flex align-items-center m-2">
                 <img
-                  src="../bilder/Time-Icon.png"
+                  src="bilder/Time-Icon.png"
                   alt="Time-Icon"
                   class="img-fluid"
                   style="max-height: 22px"
@@ -215,7 +215,7 @@
             </div>
 
             <div class="image-container">
-              <img src="../bilder/kontakt_section1.jpg" alt="Dachtechnik" />
+              <img src="bilder/kontakt_section1.jpg" alt="Dachtechnik" />
             </div>
           </div>
         </section>
@@ -527,7 +527,7 @@
       <div class="container">
         <div class="row align-items-center text-center flex-column flex-lg-row">
           <div class="col-lg-3 mb-3 mb-lg-0 text-lg-start footer-logo">
-            <img src="../bilder/Logo.png" alt="Firmenlogo" />
+            <img src="bilder/Logo.png" alt="Firmenlogo" />
             <p class="mb-1">© 2013 gutjahr-dachtechnik.de</p>
           </div>
 
@@ -541,22 +541,22 @@
             class="col-lg-4 social-icons d-flex justify-content-center justify-content-lg-end"
           >
             <img
-              src="../bilder/youtube-ikon.png"
+              src="bilder/youtube-ikon.png"
               alt="youtube-ikon"
               class="img-fluid mx-2"
             />
             <img
-              src="../bilder/instagram-ikon.png"
+              src="bilder/instagram-ikon.png"
               alt="instagram-ikon"
               class="img-fluid mx-2"
             />
             <img
-              src="../bilder/facebook-ikon.png"
+              src="bilder/facebook-ikon.png"
               alt="facebook-ikon"
               class="img-fluid mx-2"
             />
             <img
-              src="../bilder/call-ikon-white.png"
+              src="bilder/call-ikon-white.png"
               alt="call-ikonr"
               class="img-fluid mx-2"
             />
@@ -573,21 +573,21 @@
     <div class="button_styki botton_first">
       <p class="botton_paragraf_styki">
         <a class="link_button_styki" href="javascript:void(0);"
-          ><img src="../bilder/call-ikon-white.png" alt="call-ikon"
+          ><img src="bilder/call-ikon-white.png" alt="call-ikon"
         /></a>
       </p>
     </div>
     <div class="button_styki botton_second">
       <p class="botton_paragraf_styki">
         <a class="link_button_styki" href="javascript:void(0);"
-          ><img src="../bilder/email-ikon-white.png" alt="email-ikon-white"
+          ><img src="bilder/email-ikon-white.png" alt="email-ikon-white"
         /></a>
       </p>
     </div>
     <div class="button_styki botton_third">
       <p class="botton_paragraf_styki">
         <a class="link_button_styki" href="javascript:void(0);"
-          ><img src="../bilder/facebook-ikon.png" alt="facebook-ikon"
+          ><img src="bilder/facebook-ikon.png" alt="facebook-ikon"
         /></a>
       </p>
     </div>
