--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="../css/style.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
     <title>Gutjahr Dachtechnik</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -32,7 +32,7 @@
             class="col-12 col-md-4 d-flex align-items-center justify-content-m-start mb-3 mb-md-0"
           >
             <img
-              src="../bilder/Logo.png"
+              src="bilder/Logo.png"
               alt="Logo"
               class="img-fluid"
               style="max-height: 100px"
@@ -47,7 +47,7 @@
               <!-- Container 1: Telefonnummer -->
               <div class="d-flex align-items-center m-2">
                 <img
-                  src="../bilder/tel-Icon.png"
+                  src="bilder/tel-Icon.png"
                   alt="tel-Icon"
                   class="img-fluid"
                   style="max-height: 22px"
@@ -62,7 +62,7 @@
               <!--Container 2: Email -->
               <div class="d-flex align-items-center m-2">
                 <img
-                  src="../bilder/Email-Icon.png"
+                  src="bilder/Email-Icon.png"
                   alt="Email-Icon"
                   class="img-fluid"
                   style="max-height: 22px"
@@ -77,7 +77,7 @@
               <!-- Container 2: Arbeitzeit -->
               <div class="d-flex align-items-center m-2">
                 <img
-                  src="../bilder/Time-Icon.png"
+                  src="bilder/Time-Icon.png"
                   alt="Time-Icon"
                   class="img-fluid"
                   style="max-height: 22px"
@@ -214,7 +214,7 @@
             </div>
 
             <div class="image-container">
-              <img src="../bilder/ueber_uns_sektion.png" alt="Über uns Bild" />
+              <img src="bilder/ueber_uns_sektion.png" alt="Über uns Bild" />
             </div>
           </div>
         </section>
@@ -235,7 +235,7 @@
             <article class=" col-12 col-md-6 col-lg-4 mb-4">
               <div class="card leistungen_card h-100">
                 <img
-                  src="../bilder/Steildach_leistung.jpg"
+                  src="bilder/Steildach_leistung.jpg"
                   class="card-img-top"
                   alt="Haus mit Steildach"
                 />
@@ -261,7 +261,7 @@
             <article class="col-12 col-md-6 col-lg-4 mb-4">
               <div class="card leistungen_card h-100">
                 <img
-                  src="../bilder/Flachdach_leistung.jpg"
+                  src="bilder/Flachdach_leistung.jpg"
                   class="card-img-top"
                   alt="Haus mit Flachdach"
                 />
@@ -286,7 +286,7 @@
             <article class="col-12 col-md-6 col-lg-4 mb-4">
               <div class="card leistungen_card h-100">
                 <img
-                  src="../bilder/fassade_leistung.jpg"
+                  src="bilder/fassade_leistung.jpg"
                   class="card-img-top"
                   alt="Fassade eines Hauses"
                 />
@@ -313,7 +313,7 @@
             <article class="col-12 col-md-6 col-lg-4 mb-4">
               <div class="card leistungen_card h-100">
                 <img
-                  src="../bilder/Dachtechnik_leistung.jpg"
+                  src="bilder/Dachtechnik_leistung.jpg"
                   class="card-img-top"
                   alt="Ein Haus mit neues Dauch-Aufbau"
                 />
@@ -339,7 +339,7 @@
             <article class="col-12 col-md-6 col-lg-4 mb-4">
               <div class="card leistungen_card h-100">
                 <img
-                  src="../bilder/Bauklempnerei_leistung.png"
+                  src="bilder/Bauklempnerei_leistung.png"
                   class="card-img-top"
                   alt="ein Haus mit Bauklempnereidach"
                 />
@@ -365,7 +365,7 @@
             <article class="col-12 col-md-6 col-lg-4 mb-4">
               <div class="card leistungen_card h-100">
                 <img
-                  src="../bilder/schieferdeckung_leistung.jpg"
+                  src="bilder/schieferdeckung_leistung.jpg"
                   class="card-img-top"
                   alt="ein Haus mit Schieferdeckungsdach"
                 />
@@ -438,7 +438,7 @@
           </div>
           <div class="carousel-inner wrapper_photo p-lg-5 p-md-5">
             <div class="carousel-item active">
-              <img src="../bilder/Meisterhand_bg1.png" class="d-block" alt="Meisterhand" />
+              <img src="bilder/Meisterhand_bg1.png" class="d-block" alt="Meisterhand" />
               <div class="carousel-caption">
                 <h5 class="mb-3 carousel_h5">Perfekte Dacheindeckung für jedes Zuhause</h5>
                 <p class="mb-3 carousel_paragraf">
@@ -447,7 +447,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="../bilder/Meisterhand_bg2.png" class="d-block" alt="Meisterhand" />
+              <img src="bilder/Meisterhand_bg2.png" class="d-block" alt="Meisterhand" />
               <div class="carousel-caption">
                 <h5 class="mb-3 carousel_h5">Mehr Licht für Ihr Zuhause</h5>
                 <p class="mb-3 carousel_paragraf">
@@ -456,7 +456,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="../bilder/Meisterhand_bg3.png" class="d-block" alt="Meisterhand" />
+              <img src="bilder/Meisterhand_bg3.png" class="d-block" alt="Meisterhand" />
               <div class="carousel-caption">
                 <h5 class="mb-3 carousel_h5">Sicherer Schutz für Flachdächer</h5>
                 <p class="mb-3 carousel_paragraf">
@@ -465,7 +465,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="../bilder/Meisterhand_bg4.png" class="d-block" alt="Meisterhand" />
+              <img src="bilder/Meisterhand_bg4.png" class="d-block" alt="Meisterhand" />
               <div class="carousel-caption">
                 <h5 class="mb-3 carousel_h5">Schnelle Hilfe im Notfall</h5>
                 <p class="mb-3 carousel_paragraf">
@@ -474,7 +474,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="../bilder/Meisterhand_bg5.png" class="d-block" alt="Meisterhand" />
+              <img src="bilder/Meisterhand_bg5.png" class="d-block" alt="Meisterhand" />
               <div class="carousel-caption">
                 <h5 class="mb-3 carousel_h5">Umweltfreundliche Rotdächer</h5>
                 <p class="mb-3 carousel_paragraf">
@@ -483,7 +483,7 @@
               </div>
             </div>
       <div class="carousel-item">
-        <img src="../bilder/Meisterhand_bg6.png" class="d-block" alt="Meisterhand" />
+        <img src="bilder/Meisterhand_bg6.png" class="d-block" alt="Meisterhand" />
         <div class="carousel-caption">
           <h5 class="mb-3 carousel_h5">Effiziente Sanierung für ein modernes Erscheinungsbild</h5>
           <p class="mb-3 carousel_paragraf">
@@ -643,7 +643,7 @@
                 class="img_container_wrapper p-3 col-lg-2 col-4 d-flex justify-content-center"
               >
                 <img
-                  src="../bilder/partner1.jpg"
+                  src="bilder/partner1.jpg"
                   alt="Green Village"
                   class="img-partner"
                 />
@@ -652,7 +652,7 @@
                 class="img_container_wrapper p-3 col-lg-2 col-4 d-flex justify-content-center"
               >
                 <img
-                  src="../bilder/partner2.jpg"
+                  src="bilder/partner2.jpg"
                   alt="Cantilever"
                   class="img-partner"
                 />
@@ -661,7 +661,7 @@
                 class="img_container_wrapper p-3 col-lg-2 col-4 d-flex justify-content-center"
               >
                 <img
-                  src="../bilder/partner3.jpg"
+                  src="bilder/partner3.jpg"
                   alt="Printing House"
                   class="img-partner"
                 />
@@ -670,7 +670,7 @@
                 class="img_container_wrapper p-3 col-lg-2 col-4 d-flex justify-content-center"
               >
                 <img
-                  src="../bilder/partner4.jpg"
+                  src="bilder/partner4.jpg"
                   alt="Morgan & Rogern"
                   class="img-partner"
                 />
@@ -679,7 +679,7 @@
                 class="img_container_wrapper p-3 col-lg-2 col-4 d-flex justify-content-center"
               >
                 <img
-                  src="../bilder/partner5.jpg"
+                  src="bilder/partner5.jpg"
                   alt="Construction"
                   class="img-partner"
                 />
@@ -688,7 +688,7 @@
                 class="img_container_wrapper p-3 col-lg-2 col-4 d-flex justify-content-center"
               >
                 <img
-                  src="../bilder/partner6.jpg"
+                  src="bilder/partner6.jpg"
                   alt="Alpha House"
                   class="img-partner"
                 />
@@ -763,7 +763,7 @@
       <div class="container">
         <div class="row align-items-center text-center flex-column flex-lg-row">
           <div class="col-lg-3 mb-3 mb-lg-0 text-lg-start footer-logo">
-            <img src="../bilder/Logo.png" alt="Firmenlogo" />
+            <img src="bilder/Logo.png" alt="Firmenlogo" />
             <p class="mb-1">© 2013 gutjahr-dachtechnik.de</p>
           </div>
 
@@ -777,22 +777,22 @@
             class="col-lg-4 social-icons d-flex justify-content-center justify-content-lg-end"
           >
             <img
-              src="../bilder/youtube-ikon.png"
+              src="bilder/youtube-ikon.png"
               alt="youtube-ikon"
               class="img-fluid mx-2"
             />
             <img
-              src="../bilder/instagram-ikon.png"
+              src="bilder/instagram-ikon.png"
               alt="instagram-ikon"
               class="img-fluid mx-2"
             />
             <img
-              src="../bilder/facebook-ikon.png"
+              src="bilder/facebook-ikon.png"
               alt="facebook-ikon"
               class="img-fluid mx-2"
             />
             <img
-              src="../bilder/call-ikon-white.png"
+              src="bilder/call-ikon-white.png"
               alt="call-ikonr"
               class="img-fluid mx-2"
             />
@@ -809,21 +809,21 @@
     <div class="button_styki botton_first">
       <p class="botton_paragraf_styki">
         <a class="link_button_styki" href="javascript:void(0);"
-          ><img src="../bilder/call-ikon-white.png" alt="call-ikon"
+          ><img src="bilder/call-ikon-white.png" alt="call-ikon"
         /></a>
       </p>
     </div>
     <div class="button_styki botton_second">
       <p class="botton_paragraf_styki">
         <a class="link_button_styki" href="javascript:void(0);"
-          ><img src="../bilder/email-ikon-white.png" alt="email-ikon-white"
+          ><img src="bilder/email-ikon-white.png" alt="email-ikon-white"
         /></a>
       </p>
     </div>
     <div class="button_styki botton_third">
       <p class="botton_paragraf_styki">
         <a class="link_button_styki" href="javascript:void(0);"
-          ><img src="../bilder/facebook-ikon.png" alt="facebook-ikon"
+          ><img src="bilder/facebook-ikon.png" alt="facebook-ikon"
         /></a>
       </p>
     </div>
