--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <article class="col-12 col-md-6 col-lg-4 mb-4">
               <div class="card leistungen_card h-100">
                 <img
-                  src="./bilder/fassade_leistung.jpg"
+                  src="bilder/fassade_leistung.jpg"
                   class="card-img-top"
                   alt="Fassade eines Hauses"
                 />
@@ -365,7 +365,7 @@
             <article class="col-12 col-md-6 col-lg-4 mb-4">
               <div class="card leistungen_card h-100">
                 <img
-                  src="./bilder/schieferdeckung_leistung.jpg"
+                  src="bilder/schieferdeckung_leistung.jpg"
                   class="card-img-top"
                   alt="ein Haus mit Schieferdeckungsdach"
                 />
